<resources>
    <string name="app_name">Service</string>
    <string name="start_service">启动服务</string>
    <string name="stop_service">停止服务</string>
    <string name="service_count_100">把count设置为100</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解除绑定</string>
    <string name="set_bind_service_count_100">通过绑定器将count设置成100</string>
    <string name="get_bind_service_count_from_service_bind">通过绑定器获取绑定服务</string>
</resources>
