<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhaoqiang.service.MainActivity"
    android:orientation="vertical"
   >

    <Button
        android:id="@+id/btn_start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service"/>

    <Button
        android:id="@+id/btn_stop_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"/>

      <Button
          android:id="@+id/btn_set_service_count_To_100"
          android:layout_width="match_parent"
          android:textAllCaps="false"
          android:layout_height="wrap_content"
          android:text="@string/service_count_100"/>


    <Button
        android:id="@+id/btn_bind_service"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/bind_service"/>

    <Button
        android:id="@+id/btn_unBind_service"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/unbind_service"/>
    <Button
        android:id="@+id/btn_set_bind_service_count_To_100"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/set_bind_service_count_100"/>
    <Button
        android:id="@+id/btn_get_bind_service_count_to_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_bind_service_count_from_service_bind"/>
</LinearLayout>
